--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ deploy:
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: false
   on:
-    branch: gh_pages
+    branch: gh-pages
 notifications:
   email: false
