--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ deploy:
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: false
   on:
-    branch: gh-pages
+    branch: master, enhancement/travis
 before_script:
   - npm install
 script: tsc
@@ -14,3 +14,5 @@ branches:
     - gh-pages
 notifications:
   email: false
+cache: npm
+
