--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ deploy:
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: false
   on:
-    branch: master, enhancement/travis
+    branches:
+      - master
+      - enhancement/travis
 before_script:
   - npm install
 script: tsc
